# grpc

./: .gitignore  MODULE.bazel  non_module_deps.bzl
bazel/: grpc_build_system.bzl  grpc_deps.bzl  grpc_extra_deps.bzl
